--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>structure page HTML</title>
@@ -14,15 +14,15 @@
   <header>
     <figure>
       <img src="https://picsum.photos/1660/354" alt="photo deco">
-      <figcaption>superbe photo</figcaption>
+      <figcaption>superbe photo</figcaption>  <!-- legende  image-->
     </figure>
     <nav>
        <ul class="nav-header">
-            <li><a href="#" title="a propos">A propos</a></li>
-            <li><a href="#" title="Competences">Competences</a></li>
-            <li><a href="#" title="Experiences">Experiences</a></li>
-            <li><a href="#" title="Formation">Formation</a></li>
-            <li><a href="#" title="Contact">Contact</a></li>
+        <li><a href="#" title="a propos">A propos</a></li>
+        <li><a href="#" title="Competences">Competences</a></li>
+        <li><a href="#" title="Experiences">Experiences</a></li>
+        <li><a href="#" title="Formation">Formation</a></li>
+        <li><a href="#" title="Contact">Contact</a></li>
         </ul>
     </nav>
     <h1>Developpeur</h1>
