--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+
+  
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>structure page HTML</title>
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
     <figure>
       <img src="https://picsum.photos/1660/354" alt="photo deco">
@@ -18,19 +23,20 @@
     </figure>
     <nav>
        <ul class="nav-header">
-        <li><a href="#" title="a propos">A propos</a></li>
-        <li><a href="#" title="Competences">Competences</a></li>
-        <li><a href="#" title="Experiences">Experiences</a></li>
-        <li><a href="#" title="Formation">Formation</a></li>
-        <li><a href="#" title="Contact">Contact</a></li>
+        <li><a href="#apropos" title="a propos">A propos</a></li>
+        <li><a href="#competence" title="Competences">Competences</a></li>
+        <li><a href="#exp" title="Experiences">Experiences</a></li>
+        <li><a href="#formation" title="Formation">Formation</a></li>
+        <li><a href="contact.html" title="Contact">Contact</a></li>
         </ul>
     </nav>
     <h1>Developpeur</h1>
-    
   </header>
+
+  <!-- MAIN  -->
   <main>
          <!-- Profil  -->
-    <section>
+    <section id="apropos">
       <article>
         <header>
           <h2>A propos</h2>
@@ -50,7 +56,7 @@
       </article>
     </section>
      <!-- Experience  -->
-    <section>
+    <section id="exp">
       <h2>Experience professionnelle</h2>
       <article>
           <h3>Groupe Coty1</h3>
@@ -83,7 +89,7 @@
       </article>
     </section>
     <!-- Competences  -->
-    <section>
+    <section id="competence">
       <article>
         <h2>Competences</h2>
         <table>
@@ -121,7 +127,7 @@
       </article>
     </section>
     <!-- Formation  -->
-    <section>
+    <section id="formation">
       <h2>Mes Formations</h2>
       <article>
         <h3>Diplome1</h3>
@@ -155,8 +161,12 @@
         </p>
       </article>
     </section>
+
   </main>
+
+  <!-- FOOTER -->
   <footer>
+    <div><span><i class="fab fa-facebook"></i></span><span><i class="fab fa-linkedin"></i></span><span><i class="fab fa-twitter"></i></span></div>
   </footer>
     
 </body>
