--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-
-  
+   <link rel="stylesheet" href="/assets/css/style.css">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>structure page HTML</title>
@@ -18,17 +17,20 @@
   <!-- HEADER -->
   <header>
     <figure>
-      <img src="https://picsum.photos/1660/354" alt="photo deco">
+      <img src="/assets/img/dev-worker_x2100.jpg" alt="photo deco" srcset="/assets/img/dev-worker_x2100.jpg 2100w,
+      /assets/img/dev-worker_x1550.jpg 1550w,
+      /assets/img/dev-worker_x775.jpg 775w,
+      /assets/img/dev-worker_x390.jpg 390w" sizes="(min-width: 400) 775px,(min-width: 960) 1550px, (min-width:1600) 2100px, 100vw">
       <figcaption>superbe photo</figcaption>  <!-- legende  image-->
     </figure>
     <nav>
-       <ul class="nav-header">
-        <li><a href="#apropos" title="a propos">A propos</a></li>
+      <ul class="nav-header">
+        <li><a href="#apropos"    title="a propos">A propos</a></li>
         <li><a href="#competence" title="Competences">Competences</a></li>
-        <li><a href="#exp" title="Experiences">Experiences</a></li>
-        <li><a href="#formation" title="Formation">Formation</a></li>
+        <li><a href="#exp"        title="Experiences">Experiences</a></li>
+        <li><a href="#formation"  title="Formation">Formation</a></li>
         <li><a href="contact.html" title="Contact">Contact</a></li>
-        </ul>
+      </ul>
     </nav>
     <h1>Developpeur</h1>
   </header>
@@ -157,7 +159,7 @@
           <span>102 mois</span>
         </h3>
         <h3>lieu : Lille</h3>
-        <p> Laudantium obcaecati ateat inci officiis facere maiores quo, suscipit               modi, error earum eaque 
+        <p> Laudantium obcaecati ateat inci officiis facere maiores quo, suscipit modi, error earum eaque 
         </p>
       </article>
     </section>
