--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+  <link rel="stylesheet" href="/assets/css/reset.css">
    <link rel="stylesheet" href="/assets/css/style.css">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +37,7 @@
   </header>
 
   <!-- MAIN  -->
-  <main>
+  <main id="main">
          <!-- Profil  -->
     <section id="apropos">
       <article>
@@ -167,7 +168,7 @@
   </main>
 
   <!-- FOOTER -->
-  <footer>
+  <footer id="footer">
     <div><span><i class="fab fa-facebook"></i></span><span><i class="fab fa-linkedin"></i></span><span><i class="fab fa-twitter"></i></span></div>
   </footer>
     
